syntax="proto3";

package district;

option go_package="/";

import "google/protobuf/empty.proto";

service DistrictService {
    rpc GetAllDistricts(google.protobuf.Empty) returns (GetAllDistrictsResponse) {}
    rpc GetDistrictByID(GetDistrictByIDRequest) returns (GetDistrictByIDResponse) {}
    rpc GetDistrictsByIDs(GetDistrictsByIDsRequest) returns (GetDistrictsByIDsResponse) {}
}

// GetAllDistricts
message GetAllDistrictsResponse {
    Header header = 1;
    repeated DistrictData data = 2;
}

// GetDistrictByID
message GetDistrictByIDRequest {
    GetDistrictByIDInput request = 1;
}

message GetDistrictByIDInput {
    string id = 1;
}

message GetDistrictByIDResponse {
    Header header = 1;
    DistrictData data = 2;
}

// GetDistrictsByIDs
message GetDistrictsByIDsRequest {
    GetDistrictsByIDsInput request = 1;
}

message GetDistrictsByIDsInput {
    repeated string id = 1;
}

message GetDistrictsByIDsResponse {
    Header header = 1;
    repeated DistrictData data = 2;
}

// Base Data
message DistrictData {
    string districtID = 1;
    string districtName = 2;
    string cityID = 3;
}

message Header {
    int32 status = 1;
    repeated string message = 2;
}

message OptionalString {
    string value = 1;
    bool hasSet = 2;
}
